Signature/Post view fixes for mobile design * Fixed sig sizing, limited sig area to 80px everything that doesnt   fit is truncated * Sigs are hidden in mobile view. We can possibly make a link to show   the signature if the feature is requested.

--- a/app/scss/epochtalk/epochtalk.scss
+++ b/app/scss/epochtalk/epochtalk.scss
@@ -233,7 +233,7 @@ input.icon-padding { padding-right: 40px; }
       color: inherit;
       padding: 0;
     }
-    
+
     .title-area {
       background-color: inherit;
     }
@@ -353,7 +353,7 @@ pagination {
 
           &:hover, &:focus {
             background: $color-active-dark;
-          } 
+          }
         }
       }
     }
@@ -453,7 +453,7 @@ pagination {
   padding-left: 24px;
 }
 
-.category-board-name {font-size: 20px; margin-bottom: 5px; } 
+.category-board-name {font-size: 20px; margin-bottom: 5px; }
 .category-board-name a {text-decoration: underline;}
 
 .category-board-desc { font-size: 14px; line-height: 1.1; word-wrap: break-word; overflow-wrap: break-word; }
@@ -466,12 +466,12 @@ pagination {
   font-size: 14px;
   margin-top: 5px;
   margin-bottom: 5px; }
-.collapse-btn { 
-  display:inline-block; 
-  position: relative; 
-  top: -3px; 
-  width: 15px; 
-  margin-right: 5px; 
+.collapse-btn {
+  display:inline-block;
+  position: relative;
+  top: -3px;
+  width: 15px;
+  margin-right: 5px;
   font-size: .875em;
 }
 
@@ -486,11 +486,21 @@ pagination {
 // .post-editor-auth { padding: 10px 0; }
 // .edit-btn { margin: 0; }
 
-.post-signature {
+.post-sig-border {
+  clear: both;
   width: 250px;
   border-top: 1px solid $color-gray-light;
   margin-bottom: 1.4rem;
   margin-top: 1.4rem;
+}
+
+.post-signature {
+  clear: both;
+  font-size: 13px;
+  height: 80px;
+  overflow: hidden;
+  word-wrap: break-word;
+  text-overflow: ellipsis;
 }
 
 .post-block {
@@ -675,6 +685,14 @@ pagination {
   }
 
   .post-title .post-action {
+    display: none;
+  }
+
+  .post-signature {
+    display: none;
+  }
+
+  .post-sig-border {
     display: none;
   }
 
